feat(be) #128 : Bookmark
